--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Flask==0.10.1
-gunicorn==19.2.1
+futures==2.2.0
+goslate==1.3.2
 httplib2==0.9
 itsdangerous==0.24
 Jinja2==2.7.3
@@ -8,4 +9,3 @@ pytz==2014.10
 six==1.9.0
 twilio==3.7.2
 Werkzeug==0.10.1
-wolframalpha==1.2
