--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+chardet==2.3.0
 Flask==0.10.1
 futures==2.2.0
 goslate==1.3.2
@@ -6,6 +7,7 @@ httplib2==0.9
 itsdangerous==0.24
 Jinja2==2.7.3
 MarkupSafe==0.23
+pybing==0.12
 pytz==2014.10
 six==1.9.0
 twilio==3.7.2
